<resources>
    <string name="app_name" translatable="false">DIA Companion</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="LogIn">Log in</string>
    <string name="LogOut">Log out</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="Preferences">Preferences</string>
    <string name="TimeDate">Time &amp; date</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="SelectRecordTime">Select the record time</string>
    <string name="SelectRecordDate">Select the record date</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="TimeFormat" translatable="false">HH:mm</string>
    <string name="DateFormat" translatable="false">dd MM yyyy</string>
    <string name="SugarLevel">Sugar Level</string>
    <string name="Insulin">Insulin</string>
    <string name="Meal">Meal</string>
    <string name="Workout">Workout</string>
    <string name="Sleep">Sleep</string>
    <string name="Weight">Weight</string>
    <string name="Ketone">Ketone</string>
    <string name="mmoll">mmol/l</string>
    <string name="units">units</string>
    <string name="kkal">kkal</string>
    <string name="min">min</string>
    <string name="hours">h</string>
    <string name="kg">kg</string>
    <string name="g">g</string>
    <string name="Carbs">C</string>
    <string name="Protein">P</string>
    <string name="Fats">F</string>
    <string name="GI">GI</string>
    <string name="GL">GL, %</string>
    <string name="Options">Options</string>
    <string name="Account">Account</string>
    <string name="AppType">App type</string>
    <string name="Audio">Audio</string>
    <string name="Notifications">Notifications</string>
    <string name="Info">Info</string>
    <string name="AreUSureDeleteAllRecords">Are you sure you want to delete all the records?</string>
    <string name="DeleteAllRecords">Delete all the records?</string>
    <string name="Username">Username</string>
    <string name="UserID">UserID</string>
    <string name="Password">Password</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Phone">Phone</string>
    <string name="FCs">FCs</string>
    <string name="FirstName">First name</string>
    <string name="LastName">Last name</string>
    <string name="Patronymic">Patronymic</string>
    <string name="BirthDate">Birth date</string>
    <string name="Gender">Gender</string>
    <string name="Height">Height</string>
    <string name="HeightSm">Height, sm</string>
    <string name="WeightKg">Weight, kg</string>
    <string name="WeightKgPregnancy">Weight, kg</string>
    <string name="AttendingDoctor">Attending doctor</string>
    <string name="PatientId">Patient ID</string>
    <string name="PregnancyStart">Date of the beginning of pregnancy</string>
    <string name="PersonalData">Personal data</string>
    <string name="AccountData">Account data</string>
    <string name="Contacts">Contacts</string>
    <string name="Pregnancy">Pregnancy</string>
    <string-array name="AttendingDoctors">
        <item>Без врача</item>
        <item>Анопова Анна Дмитриевна</item>
        <item>Болотько Яна Алексеевна</item>
        <item>Дронова Александра Владимировна</item>
        <item>Попова Полина Викторовна</item>
        <item>Ткачук Александра Сергеевна</item>
        <item>Васюкова Елена Андреевна</item>
    </string-array>
    <string name="NotificationFillAllFields">Please fill all required fields to continue</string>
    <string name="GDMRCT" translatable="false">ГСД, диета (с прогнозированием)</string>
    <string name="GDMRCTDescription" translatable="false">Версия позволяет вести контроль за приемами
        пищи, физической активностью и уровнем сахара в крови. В версию внедрена рекомендательная
        система, помогающая корректировать прием пищи пациенток.\n
        Предназначен для беременных пациенток, страдающих ГСД</string>
    <string name="GDM" translatable="false">ГСД, диета + инсулинотерапия</string>
    <string name="GDMDescription" translatable="false">Версия позволяет вести контроль за приемами
        пищи, физической активностью и уровнем сахара в крови.\n
        Предназначен для беременных пациенток, страдающих ГСД
    </string>
    <string name="MS" translatable="false">Дневник питания и самоконтроля</string>
    <string name="MSDescription" translatable="false">Версия позволяет вести контроль за приемами
        пищи, физической активностью и уровнем сахара в крови.\n
        Предназначен для пациентов, страдающих диабетом</string>
    <string name="PCOS" translatable="false">Дневник питания</string>
    <string name="PCOSDescription" translatable="false">Версия предоставляет функционал
        для ведения данных о приемах пищи и физической активности.\n
        Подходит для пациентов, не болеющих диабетом</string>
    <string name="EnableNotifications">Enable notifications</string>
    <string name="NotificationRemember">Do not forget to enter information about your activity for the day</string>
    <string name="OnBWelcome">Welcome to\nDIA Companion!</string>
    <string name="OnBAboutApp">Our app is your indispensable assistant for health monitoring.
        Please follow initial steps to setup your app.</string>
    <string name="OnBLetsStart">Let\'s start!</string>
    <string name="OnBSetupComplete">Setup complete!</string>
    <string name="Finish">Finish</string>
    <string name="OnBEnterPersonalData">Please, enter your personal data</string>
    <string name="OnBEnterGender">Please, enter your gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Analytics">Analytics</string>
    <string name="Details">Details</string>
    <string name="LastRecords">Last Records</string>
    <string name="RecordsHistory">Records History</string>
    <string name="NoRecords">No Records</string>
    <string name="PresentDay">Present Day</string>
    <string name="AllRecords">All Records</string>
    <string name="Update">Update</string>
    <string name="ChooseCategory">ChooseCategory</string>
    <string name="NewRecord">New Record</string>
    <string name="UpdateRecord">Update Record</string>
    <string name="DeleteRecord">Delete Record?</string>
    <string name="AreUSureDeleteRecord">Are you sure you want to delete the record?</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string-array name="SugarLevelSpinner">
        <item>On an empty stomach</item>
        <item>After breakfast</item>
        <item>After lunch</item>
        <item>After dinner</item>
        <item>During childbirth</item>
        <item>Additionally</item>
    </string-array>
    <string name="WasWorkout">There was physical activity</string>
    <string-array name="InsulinSpinner1">
        <item>Prolonged</item>
        <item>Ultrashort</item>
        <item>Short</item>
    </string-array>
    <string-array name="InsulinSpinner2">
        <item>On an empty stomach</item>
        <item>After breakfast</item>
        <item>After lunch</item>
        <item>After dinner</item>
        <item>Additionally</item>
    </string-array>
    <string name="MealType">Meal Type</string>
    <string name="FoodList">Food List</string>
    <string name="SugarLevelBeforeFood">Sugar Level Before Food</string>
    <string-array name="MealSpinner">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Snack">Snack</string>
    <string name="EnterFoodName">Enter food name</string>
    <string name="Sorting">Sorting</string>
    <string-array name="FoodSort">
        <item>Name</item>
        <item>GI</item>
    </string-array>
    <string name="EnterFoodWeight">Enter food weight:</string>
    <string name="MealName">Meal Name</string>
    <string name="WeightG">Weight, g</string>
    <string name="CarbsG">Carbo, g</string>
    <string-array name="WorkoutSpinner">
        <item>Walking</item>
        <item>Warm up</item>
        <item>Sport</item>
        <item>Chores</item>
        <item>Garden work</item>
    </string-array>
    <string name="TimeDateSleep">Wake up time &amp; date</string>
    <string-array name="KetoneSpinner">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string name="Help">Help</string>
    <string name="RecipeList">Recipe List</string>
    <string name="AddRecipe">Add Recipe</string>
    <string name="RecipeName">Recipe Name</string>
    <string name="Recipe">Recipe</string>
    <string name="RecipeCategory">Recipe Category</string>
    <string name="Ingredients">Ingredients</string>
    <string-array name="RecipeSpinner">
        <item>Алкогольные напитки</item>
        <item>Блюда из картофеля, овощей и грибов</item>
        <item>Блюда из круп</item>
        <item>Блюда из мяса и мясных продуктов</item>
        <item>Блюда из рыбы, морепродуктов и раков</item>
        <item>Блюда из творога</item>
        <item>Блюда из яиц</item>
        <item>Бобовые, орехи, продукты из бобовых</item>
        <item>Быстрое питание</item>
        <item>Вспомогательные продукты</item>
        <item>Вспомогательные продукты</item>
        <item>Гарниры</item>
        <item>Готовые завтраки</item>
        <item>Детское питание</item>
        <item>Диабетические продукты</item>
        <item>Жиры и масла</item>
        <item>Закуски</item>
        <item>Зелень и овощные продукты</item>
        <item>Зерно, мука</item>
        <item>Злаки и макароны</item>
        <item>Злаки на завтрак</item>
        <item>Колбасы</item>
        <item>Кондитерские изделия</item>
        <item>Конфеты, шоколад</item>
        <item>Молочные и яичные продукты</item>
        <item>Молочные продукты</item>
        <item>Морепродукты</item>
        <item>Мясо и мясные продукты</item>
        <item>Напитки</item>
        <item>Овощи</item>
        <item>Пища коренных народов</item>
        <item>Продукты из говядины</item>
        <item>Продукты из орехов и семян</item>
        <item>Продукты из птицы</item>
        <item>Продукты из свинины</item>
        <item>Продукция из баранины, телятины и дичи</item>
        <item>Ресторанная еда</item>
        <item>Рыба и рыбные продукты</item>
        <item>Сладости</item>
        <item>Сосиски и мясные блюда</item>
        <item>Соусы</item>
        <item>Специи и травы</item>
        <item>Супы</item>
        <item>Сыры</item>
        <item>Фрукты и фруктовые соки</item>
        <item>Хлебобулочные изделия</item>
        <item>Холодные блюда (готовые изделия)</item>
        <item>Ягоды, варенье</item>
    </string-array>
    <string name="HighGI" translatable="false">Рекомендуется исключить из рациона или уменьшить количество
        продуктов с высоким гликемическим индексом (более 55)</string>
    <string name="ManyCarbs" translatable="false">Рекомендовано уменьшить количество углеводов в приеме пищи</string>
    <string name="HighBGBefore" translatable="false">Высокий уровень глюкозы до еды.
        Рекомендовано уменьшить количество углеводов во время перекусов.
        Если перекусов не было, проконсультируитесь с врачом</string>
    <string name="LowPV" translatable="false">В последнее время в Вашем рационе было недостаточно
        пищевых волокон. Добавьте в рацион разрешённые овощи, фрукты, злаковые, отруби
        (см. обучающие материалы)</string>
    <string name="BGPredict" translatable="false">Вероятно, уровень глюкозы после еды будет высоким, рекомендована прогулка после приема пищи</string>
</resources>