<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText"
    tools:showIn="navigation_view">

    <item android:title="@string/Options" >
        <menu>
            <item android:title="@string/Account"
                android:icon="@drawable/options" android:id="@+id/nav_view_account"/>
            <item android:title="@string/AppType"
                android:icon="@drawable/options" android:id="@+id/nav_view_app_type"/>
            <item android:title="@string/Audio"
                android:icon="@drawable/options" android:id="@+id/nav_view_audio"/>
            <item android:title="@string/Notifications"
                android:icon="@drawable/options" android:id="@+id/nav_view_notifications"/>
            <item android:title="@string/Help"
                android:icon="@drawable/options" android:id="@+id/nav_view_help"/>
        </menu>

    </item>


</menu>