<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="SharedPreferences">

    <PreferenceCategory app:title="@string/FCs">

        <EditTextPreference
            app:key="NAME"
            app:title="@string/FirstName"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="SECOND_NAME"
            app:title="@string/LastName"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="PATRONYMIC"
            app:title="@string/Patronymic"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!--<PreferenceCategory app:title="@string/PersonalData">

        <Preference
            app:key="BIRTH_DATE"
            app:title="@string/BirthDate"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="HEIGHT"
            app:title="@string/Height"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="WEIGHT"
            app:title="@string/Weight"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>-->

    <!--<PreferenceCategory app:title="@string/AccountData">

        <EditTextPreference
            app:key="PHONE"
            app:title="@string/Phone"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="EMAIL"
            app:title="@string/Email"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/AttendingDoctor">

        <EditTextPreference
            app:key="ATTENDING_DOCTOR"
            app:title="@string/AttendingDoctor"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Pregnancy">

        <SwitchPreferenceCompat
            app:key="PREGNANCY"
            app:title="@string/Pregnancy" />

        <Preference
            app:dependency="PREGNANCY"
            app:key="PREGNANCY_START_DATE"
            app:title="@string/PregnancyStart"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>-->

</PreferenceScreen>