<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    >

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/nav_view_user_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user_icon"
        app:riv_oval="true"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_weight="1"
            android:id="@+id/nav_view_user_name"
            style="@style/SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textAlignment="textEnd"

            />

        <TextView
            android:layout_weight="1"
            android:id="@+id/nav_view_user_ID"
            style="@style/SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/UserID"
            android:textAlignment="textStart"/>

    </LinearLayout>

    <TextView
        android:id="@+id/nav_view_Log_out"
        style="@style/LinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogOut"
        android:layout_gravity="center"/>


</LinearLayout>